unittest/bin/src/rl/tests/negative/cmd3.js
for(var i = 0; i < 5; ++i)
{
	WScript.Echo("This is number " + i);
}